# pagedigest

./: .gitignore  AGENTS.md  CONTENT_HYGIENE.md  CONTRACT.md  DOGFOOD_TEMPLATE.md  LICENSE  README.md  RELEASE_CHECKLIST.md  REVIEW_GUIDE.md  ROADMAP.md  SPEC.md  pagedigest.schema.json
.github/workflows/: ci.yml  deploy-pages.yml  publish-crate.yml  publish-npm.yml  publish-npx.yml  publish-python.yml  release.yml
docs/: DOGFOOD_TEMPLATE.md  README.md  consumer-integration.md  cooperative-automation.md  ecosystem.md
docs/announcements/: v1-rc.md
docs/archive/: REVIEW_GUIDE.md
docs/case-studies/: dotrepo.md
docs/registrations/: link-relation-registration-draft.md  link-relation-registration-request.md  well-known-uri-registration-draft.md  well-known-uri-registration-request.md
implementations/python-consumer/: README.md  pyproject.toml
implementations/python-consumer/examples/: cache_persistence.py
implementations/python-consumer/pagedigest/: __init__.py  cli.py  core.py
implementations/python-consumer/tests/: test_cache_persistence.py  test_cli.py  test_content_hygiene.py  test_core.py  test_v1_status.py  test_vectors.py
implementations/rust-generator/: Cargo.toml  README.md
implementations/rust-generator/src/: main.rs
integrations/scrapy/: README.md  pyproject.toml  requirements.txt
integrations/scrapy/examples/: run_demo.py
integrations/scrapy/pagedigest_scrapy/: __init__.py  header.py  manifest.py  middleware.py  store.py
integrations/scrapy/tests/: test_offline.py
site/: 404.html  _headers  _redirects  _worker.js  index.html  robots.txt  sitemap.xml
site-state/: README.md  state.json
site/.well-known/: pagedigest.json
site/announcements/v1-rc/: index.html
site/rel/: index.html
test-vectors/: README.md  complete-removal-next.json  complete-removal-prev.json  coverage-mode-change-next.json  coverage-mode-change-prev.json  coverage-prefixes-change-next.json  coverage-prefixes-change-prev.json  header-formats.json  index.json  invalid-digest-shape.json  invalid-missing-required.json  invalid-url-key-fragment.json  invalid-url-key-scheme-relative.json  rollback-content-next.json  rollback-content-prev.json  site-rev-equal-short-circuit-next.json  site-rev-equal-short-circuit-prev.json  url-key-variants.json  valid-minimal.json  valid-partial-prefix.json  valid-with-coverage-complete.json  valid-with-digest.json  violation-monotonicity-next.json  violation-monotonicity-prev.json
test-vectors/audit-match/: manifest.json
test-vectors/audit-mismatch/: manifest.json
tools/: check_content_hygiene.py  check_dogfood_manifest.py  check_v1_status.py  reconcile_served_digests.py  run_checks.sh  smoke_generator_astro_conformance.py  smoke_generator_progression.py  validate_vectors.py  verify_over_wire_digests.py
