[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pagedigest"
version = "0.1.0"
description = "Minimal pagedigest consumer reference implementation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23.0"
]
